g3 architect responsive done

--- a/style/architects.css
+++ b/style/architects.css
@@ -114,7 +114,7 @@ main > section {
 /* some-facts-related-styles */
 .facts-container{
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+   grid-template-columns: repeat(4,1fr); 
 }
 .fact{
   border: 1px solid #FF900E;
@@ -139,30 +139,122 @@ main > section {
 .fact-description{
   max-width: 540px;
 }
+/* sponsor */
+.sponsor-title{
+  font-weight: 700px;
+  font-size: 2.85rem;
+}
+.text-light-grey{
+  font-weight: 400px;
+  font-size: 1rem;
+}
+.sponsor-info{
+  max-width: 540px;
+  margin: 50px auto;
+  text-align: center;
+}
+
+.sponsor-companies img{
+  filter: grayscale(100%);}
+  .sponsor-companies{
+      display: grid;
+      grid-template-columns: repeat(5,1fr);
+    }
+    /* features section related styles */
+    #features-sectio-title{
+border-left: 5px solid #FF900E;
+padding: 20px;
+    }
+    .features-card .feature-title{
+      font-weight: 600px;
+      font-size: 1.25rem;
+      
+    }
+    .features-card {
+      padding: 30px;
+      box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.25);
+      border: 30px;
+      margin-bottom: 20px;
+      border-radius: 8px;
+    }
+    .features{
+      gap: 20px;
+    }
+#experience-badge{
+  padding: 45px 42px;
+  background-color: #FF900E;
+  border-radius: 8px;
+  border: none;
+  height: 200px;
+  width: 342px;
+  margin-top: -100px;
+  margin-left:-100px ;
+}
+#ecperience-year{
+  font-weight: 700px;
+  font-size: 2.85rem;
+  color: #FFFFFF;
+}
+#experience-btn{
+  font-size: 1.5rem;
+  font-weight: 600px;
+  color: #FFFFFF;
+}
+.features-architect{
+  width: 100%;
+}
  /* responsive media  query */
   @media screen and (max-width:576px) {
     .navbar, .nav-link ,
-    .our-team {
+    .our-team ,
+    .features {
       flex-direction: column;
     }
-    .team-image-container{
+    .team-image-container
+    
+    {
       grid-template-columns: repeat(1,1fr);
       margin-left: 0px;
     }
     .our-features{
       margin-left: 20px;
     }
-  
+    .fact{
+      grid-template-columns: repeat(1,1fr);
+    }
+    .facts-container{
+      justify-items: center;
+      gap: 24px;
+      grid-template-columns: repeat(1,1fr);
+    }
+  .sponsor-companies{
+    grid-template-columns: repeat(1,1fr);
+    justify-items: center;
+    gap: 50px;
+  }
+  #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
    
   }
   /* medium size device */
   @media screen and (min-width:576px) and (max-width:992px) {
-    .our-team{
+    .our-team,
+    .features
+    {
       flex-direction: column;
       
     }
     .our-features{
       margin: 50px auto;
     }
+  .sponsor-companies ,
+  .facts-container
+  {
+    grid-template-columns: repeat(2,1fr);
+    gap: 50px;
+  }
   }
   
